--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -50,7 +50,7 @@
     /* with id _targetID.                                                 */
     function loadSurvey() {
       var _hostname = "<%= APP_CONFIG['host'] %>";
-      var _url = "http://"+ _hostname + "/surveys/" + _surveyID + ".json";
+      var _url = "https://"+ _hostname + "/surveys/" + _surveyID + ".json";
       var target = jQuery("#" + _targetID)
       var surveyID = _surveyID
 
@@ -74,14 +74,14 @@
         // direct the form post into the iframe's window
         iframe[0].contentWindow.name = uniqueString;
         form.attr("target", uniqueString);
-        form.attr("action", 'http://' + _hostname + '/survey_responses');
+        form.attr("action", 'https://' + _hostname + '/survey_responses');
 
         // call the native submit, not the jQuery submit wrapper
         // this is to avoid hitting this handler twice (and looping)
         form[0].submit();
 
         // pull back the thank you page
-        jQuery.getJSON("http://" + _hostname + "/surveys/" + _surveyID + "/thank_you_page.json", "callback=?", function(data){
+        jQuery.getJSON("https://" + _hostname + "/surveys/" + _surveyID + "/thank_you_page.json", "callback=?", function(data){
           jQuery("#" + _targetID).html(data.html);
         });
 
