update the other pages that utilize http in some cases

--- a/app/views/surveys/holding_page.html.erb
+++ b/app/views/surveys/holding_page.html.erb
@@ -37,9 +37,9 @@
 
 <div class='content'>
   <% if browser.mobile? || browser.tablet? %>
-    <%= image_tag 'http://www.usa.gov/resources/images/usagov_logo1.gif', class: 'banner' %>
+    <%= image_tag 'https://www.usa.gov/resources/images/usagov_logo1.gif', class: 'banner' %>
   <% else %>
-    <%= image_tag 'http://www.usa.gov/resources/images/usagov_logo-mobile.gif', class: 'banner' %>
+    <%= image_tag 'https://www.usa.gov/resources/images/usagov_logo-mobile.gif', class: 'banner' %>
   <% end %>
 
   <div class='message'>
