--- a/app/views/widget/_default_invite_text.html.erb
+++ b/app/views/widget/_default_invite_text.html.erb
@@ -2,9 +2,9 @@
   id: 'cancel' %>
 <div class='banner'>
   <% if browser.mobile? || browser.tablet? %>
-    <%= image_tag 'http://www.usa.gov/resources/images/usagov_logo-mobile.gif' %>
+    <%= image_tag 'https://www.usa.gov/resources/images/usagov_logo-mobile.gif' %>
   <% else %>
-    <%= image_tag 'http://www.usa.gov/resources/images/usagov_logo1.gif' %>
+    <%= image_tag 'https://www.usa.gov/resources/images/usagov_logo1.gif' %>
   <% end %>
 </div>
 <p>
