Fix 508 issue with matrix question labels.
Change the style "display: none" used on matrix question answers to:

{
  position: absolute;
  left: -10000px;
  height: 1px;
  width: 1px;
  overflow: hidden;
}

so that screen readers will no longer ignore the labels.  Most screen
readers now respect the display:none attribute and do not read hidden
elements.

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -44,14 +44,14 @@
 			                </tr>
 			                <% for row_header in element.assetable.choice_questions do %>
 			                  <tr>
-			                    <th scope="row">
+			                    <td scope="row">
 														<%= row_header.question_content.statement%><%= "*" if row_header.question_content.required? || element.assetable.required %>
 														<%= hidden_field_tag "q_#{row_header.question_content.id}_required", row_header.question_content.required || element.assetable.question_content.required, :class => "required_question" %>
-													</th>
+													</td>
 			                    <% row_header.choice_answers.each do |a| %>
 			                      <td>
 			                      <%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", row_header.question_content.id, :id => nil %>
-														<%= label_tag "response_raw_responses_attributes_#{index}_answer_#{a.id}", "a.answer", :style => "display:none" %>
+														<%= label_tag "response_raw_responses_attributes_#{index}_answer_#{a.id}", "a.answer", :style => "position: absolute; left: -10000px; height: 1px; width: 1px; overflow: hidden;" %>
 			                      <%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", a.id, false, :class => "question_#{row_header.question_content.id}_answer" %>
 			                      </td>
 			                    <% end %>
