Remove caching of invitation modal
When the invitation code was copied over from GSA, the original caching
code was left in-place.  That code must be removed since the users must
be able to update the invitation text without having to add a cache
buster to the URL.

The code allowing for the {{accept}} {{reject}} tags was also not copied
over from GSA so we are adding that now.

This should fix the caching issues we have been seeing with the
foodsafety testing.

--- a/app/views/widget/_invite_modal.html.erb
+++ b/app/views/widget/_invite_modal.html.erb
@@ -53,7 +53,7 @@
   height="0" width="0" tabindex="-1" title="empty" style="display: none;"></iframe>
 <div id='vocModal' aria-hidden='true' aria-labelledby='modalTitle' aria-describedby='modalDescription' role='dialog'>
   <p>
-    <%= invitation_text.html_safe %>
+    <%= invitation_text %>
   </p>
   <input type="button" name="vocEnter" id="vocEnter" value="<%= invitation_accept_button_text %>">
   <input type="button" name="vocCancelButton" id="vocCancelButton" value="<%= invitation_reject_button_text %>">
