Remove redundant accept/reject buttons

--- a/app/views/widget/_invite_modal.html.erb
+++ b/app/views/widget/_invite_modal.html.erb
@@ -51,11 +51,7 @@
 </style>
 <iframe src="http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/invitation<%= '?test_invitation=true' if @test_invitation %>"
   height="0" width="0" tabindex="-1" title="empty" style="display: none;"></iframe>
-<div id='vocModal' aria-hidden='true' aria-labelledby='modalTitle' aria-describedby='modalDescription' role='dialog'>
-  <p>
-    <%= invitation_text %>
-  </p>
-  <input type="button" name="vocEnter" id="vocEnter" value="<%= invitation_accept_button_text %>">
-  <input type="button" name="vocCancelButton" id="vocCancelButton" value="<%= invitation_reject_button_text %>">
+<div id='vocModal' aria-hidden='true' aria-labelledby='modalTitle' aria-describedby='modalDescription' role='dialog' tabindex='-1'>
+  <%= invitation_text %>
 </div>
 <div id='vocModalOverlay' tabindex='-1'></div>
