Namespace the inline css so it only applies to the #vocModal div

--- a/app/views/widget/_invite_modal.html.erb
+++ b/app/views/widget/_invite_modal.html.erb
@@ -30,24 +30,24 @@
       text-align:center;
   }
 
-  .modalCloseButton {
+  #vocModal .modalCloseButton {
       float:right;
       position:absolute;
       top:10px;
       left:95%;
   }
-  .modalCloseButton img {
+  #vocModal .modalCloseButton img {
       border:0;
   }
 
-  .screen-reader-offscreen {
+  #vocModal .screen-reader-offscreen {
       position:absolute;
       left:-999px;
       width:1px;
       height:1px;
       top:auto;
   }
-  .top-right {
+  #vocModal .top-right {
     position: absolute;
     top: 5px;
     right: 5px;
