Do not release jQuery from the global scope

--- a/app/views/widget/_load_jquery.js.erb
+++ b/app/views/widget/_load_jquery.js.erb
@@ -14,6 +14,7 @@ function loadMobileBrowserDetection() {
 
 /* Load jQuery if it is not present */
 if (window.jQuery === undefined || window.jQuery.fn.jquery != '1.7.2') {
+  console.log("jQuery is not loaded");
   var script_tag = document.createElement('script');
   script_tag.setAttribute('type', 'text/javascript');
   script_tag.setAttribute('src',
@@ -33,6 +34,7 @@ if (window.jQuery === undefined || window.jQuery.fn.jquery != '1.7.2') {
   (document.getElementsByTagName("head")[0] || document.documentElement).appendChild(script_tag);
 
 } else {
+  console.log("Using existing jQuery", window.jQuery);
   /* The site already has jQuery loaded */
   jQuery = window.jQuery;
   loadMobileBrowserDetection();
@@ -47,7 +49,7 @@ function scriptLoadHandler(){
   var interval = setInterval(function(){
     if((typeof window.jQuery !== "undefined") && window.jQuery.fn.jquery == '1.7.2') {
       clearInterval(interval);
-      jQuery = window.jQuery.noConflict(true);
+      jQuery = window.jQuery.noConflict();
       loadMobileBrowserDetection();
       main();
     }
