Show poll results above the custom Thank You Page
When the survey type is a Poll, and there are questions set to show
their results, the poll results bar chart will be shown above the custom
thank you page.

--- a/app/views/surveys/thank_you.html.erb
+++ b/app/views/surveys/thank_you.html.erb
@@ -1,9 +1,16 @@
 <% title "#{survey.name} - Thank You - #{survey.survey_type.name.titleize}" %>
 
+<% if display_poll_results?(@survey, @survey_version) %>
+  <%= render partial: 'surveys/poll_results',
+    locals: { survey: @survey, survey_version: @survey_version,
+    results: @results }
+  %>
+<% end %>
+
 <% if survey_version.present? && survey_version.thank_you_page.present? %>
-	<%= survey_version.thank_you_page.html_safe %>
+  <%= survey_version.thank_you_page.html_safe %>
 <% else %>
-	<div id="thank_you_text">
-		<span id="important_to_us">Your feedback is important to us.</span> Thank you for taking our survey!
-	</div>
+  <div id="thank_you_text">
+    <span id="important_to_us">Your feedback is important to us.</span> Thank you for taking our survey!
+  </div>
 <% end %>
