--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,6 +1,5 @@
 <% title "#{@survey.name} - Page 1 - #{@survey.survey_type.name.titleize}" %>
 
-<% javascript 'survey.js' %>
 <iframe src="http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/visit" style="display: none;"
 	height="0" width="0" tabindex="-1" title="empty"></iframe>
 
@@ -155,3 +154,5 @@
 <div class="pageNav">
 	<%= link_to "View All", surveys_url, :class => "pageNav" %>
 </div> -->
+
+<%= javascript_include_tag 'survey.js' %>
