Add survey.js to the precompile list.  Fetch survey.js from assets/ instead of public/

--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -87,7 +87,7 @@
       });
 
       /* Add the survey control methods to the voc object */
-      jQuery.getScript('http://<%= APP_CONFIG["host"] %>/javascripts/survey.js?target=' + _targetID)
+      jQuery.getScript('http://<%= APP_CONFIG["host"] %>/assets/survey.js')
         .done(function() { VOC.onPageLoad(); });
 
       return _this;
