Do not render the layout using render_to_string
When fetching the survey contents using jsonp, render_to_string is being
called without specifying layout: false.  This causes the full HTML
document to be generated and inserted by the widget js code into the
content page, breaking the page and any javascript added to control the
survey.

Change the render_to_string to use layout: false to remove the breaking
html.

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -150,9 +150,5 @@
     <% end -%>
   <% end -%>
 <% end -%>
-<!--
-<div class="pageNav">
-  <%= link_to "View All", surveys_url, :class => "pageNav" %>
-</div> -->
 
-<%= javascript_include_tag 'survey.js' %>
+<%= javascript_include_tag 'survey.js' unless params[:callback].present? %>
