return the object being shown

--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -284,6 +284,7 @@
 
       // set the focus to the first keyboard focusable item
       o.filter(focusableElementsString).filter('*:visible').first().focus();
+      return obj;
   }
 
   function hideModal() {
