--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -100,12 +100,11 @@
     }
 
     function focusSurvey(targetID) {
-      var _surveyContainer = $("#"+targetID);
+      var _surveyContainer = jQuery("#"+targetID);
       var focusableElementsString = "a[href], area[href], input:not([disabled]), select:not([disabled]), textarea:not([disabled]), button:not([disabled]), iframe, object, embed, *[tabindex], *[contenteditable]";
       var focusableItems = _surveyContainer.find("*")
         .filter(focusableElementsString)
         .filter("*:visible");
-      console.log("FocusableItems:", focusableItems);
       focusableItems.first().focus();
     }
 
