--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -249,7 +249,11 @@
 
   function showInvitation() {
     var targetId = '#<%= params[:target_id] %>';
+    var modalSurvey = <%= params[:modal] == 'true' %>;
     jQuery(targetId).html("<%= escape_javascript(render('invite_modal')) %>");
+    if(modalSurvey == true && '<%= @survey.suppress_invitation %>' == 'true') {
+      enterButtonModal();
+    }
     showModal(jQuery('#vocModal'));
   }
 
