--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,6 +1,6 @@
 <% title "#{@survey.name} - Page 1 - #{@survey.survey_type.name.titleize}" %>
 
-<iframe src="http://<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/visit" style="display: none;"
+<iframe src="//<%= APP_CONFIG['host'] %>/surveys/<%= @survey.id %>/visit" style="display: none;"
   height="0" width="0" tabindex="-1" title="empty"></iframe>
 
 <% if @survey_version.nil? %>
